# aistop

./: .gitignore  README.md  build.gradle  build.gradle.kts  gradle.properties  gradlew  integrate-aistop.sh  local.properties  settings.gradle  settings.gradle.kts
.github/workflows/: ci.yml
aistop-core/: Cargo.toml  rust-toolchain.toml
aistop-core/src/: auditor.rs  export.rs  hasher.rs  jni_bridge.rs  lib.rs  redact.rs  scorer.rs  store.rs
aistop-core/src/pii/: detector.rs  mod.rs  regex_detector.rs  rules.rs
app/: build.gradle  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/aieonyx/edisondb/: ArpiHeader.kt  EdisonDbAndroid.kt
app/src/main/kotlin/com/aieonyx/aistop/accessibility/: SovereignAccessibilityService.kt
app/src/main/kotlin/com/aieonyx/aistop/core/: PermissionScanner.kt  TrustDatabase.kt
app/src/main/kotlin/com/aieonyx/aistop/db/: EdisonDbExposureDao.kt  EdisonExposureDatabase.kt  ExposureDao.kt  ExposureDatabase.kt  ExposureEvent.kt
app/src/main/res/drawable/: ic_nav_dashboard.xml  ic_nav_log.xml  ic_nav_scrub.xml  ic_nav_settings.xml  ic_nav_shield.xml
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/xml/: accessibility_service.xml  file_paths.xml
docs/: index.html  privacy.html
gradle/: libs.versions.toml
(+33 files in other folders)
