[package]
name    = "aistop-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
# Copyright (c) 2026 Edison Lepiten / AIEONYX
# No AI model names in source. No migration narrative in committed files.

[lib]
name      = "aistop_core"
crate-type = ["cdylib", "staticlib"]

[dependencies]
jni        = { version = "0.21", features = ["invocation"] }
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3     = "1.5"
regex      = "1.10"
once_cell  = "1.19"

[profile.release]
opt-level = 3
lto       = true
strip     = true
panic     = "abort"   # smaller binary, no unwinding on Android

[profile.dev]
opt-level = 0
debug     = true
